fix(extensions-main): clear module javac warnings (#2029)
Zero project -Xlint diagnostics in extensions-main (batch 1 / full zero):
static walker constant/method qualification, valueOf for removal-deprecations,
redundant cast cleanup, @Deprecated + serialVersionUID on xmldom shims,
try-with-resources close() cleanup, remove exception-swallowing finally returns,
PSExtensionParamsHelper final + instance logger + null-safe doLog.

Tests: PSExtensionParamsHelperTest, PSDateDifferenceTest.
Standalone: cd modules/extensions-main && ../../mvnw clean install (55 tests).

Fixes #2029
Refs #2200

> Co-Authored by Grok Build using grok-4.5 with agent main.